fix(css): adjust widget expanded padding to a percentage to prevent squishe graphs on mpobile

--- a/fullstack/src/components/WidgetBase.css
+++ b/fullstack/src/components/WidgetBase.css
@@ -1,6 +1,6 @@
 .widget {
     flex: 1 1 700px;
-    padding: 50px;
+    padding: 1%;
     background-color: hsla(0, 0%, 100%, .15);
     border-radius: 20px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
